src/styles/components/projets.scss
section {
  display: flex;
  flex-direction: column;
  width: 100%;
  #projets {
    height: 300px;
  }
}

.top-texts {
  animation: text-cards-animate 3s ease forwards;
  display: flex;
  flex-direction: column;
  text-align: center;
  color: #fff;

  h2 {
    font-size: 2vw;
    font-weight: 600;
  }

  p {
    font-size: 1em;
    font-weight: 400;
    color: #94a1b2;
    position: relative;
    bottom: 1vw;
  }
}

.projets-content {
  font-family: "Oxygen", sans-serif;
  color: #fff;

  margin: 0 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  .cards-content {
    display: grid;
    grid-template-columns: 1fr 0fr;
    gap: 40px;
    height: 630px;
    width: auto;
    overflow-y: hidden;
    scroll-behavior: smooth;
    border-top: 5px solid rgb(22, 22, 26);
    border-bottom: 5px solid rgb(22, 22, 26);
    padding: 2em;
    border-radius: 25px;
    background-color: rgb(22, 22, 26, 0.3);

    .project-card {
      position: relative;
      padding: 20px;
      background: linear-gradient(#16161a, #16161a) padding-box,
        linear-gradient(145deg, transparent 35%, #7f5af0, #7f5af0) border-box;
      border: 2px solid transparent;
      border-radius: 8px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      text-align: center;
      height: 250px;
      cursor: pointer;

      .card-content {
        margin: 0;
        padding: 0;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;

        h3 {
          font-size: 0.88em;
          font-weight: 400;
          padding: 10px;
          margin: 0 10px;
          opacity: 0.7;
          animation: text-cards-animate 2s ease forwards;
          transition: all 1s;
          width: 150px;
        }

        img {
          height: 1.5em;
          padding: 10px;
          border-radius: 5px;
          transition: all 1s;
          box-shadow: rgb(127, 90, 240, 0.7) 0px 3px 27px -5px,
            rgb(0, 0, 0) 0px 8px 16px -8px;
          animation: text-cards-animate 3s ease forwards;
        }

        p {
          font-size: 0.7em;
          padding: 10px;
          margin: 10px;
          color: #94a1b2;
          transition: all 1s;
          border-radius: 5px;
          animation: text-cards-animate 4s ease forwards;
          width: 160px;
        }
      }
    }

    .project-card:nth-child(1),
    .project-card:nth-child(2) {
      animation: cards-animate 1s ease forwards;
    }

    .project-card:nth-child(3),
    .project-card:nth-child(4) {
      animation: cards-animate 2s ease forwards;
    }

    .project-card:nth-child(5),
    .project-card:nth-child(6) {
      animation: cards-animate 3s ease forwards;
    }

    .project-card:hover {
      background: linear-gradient(#212121, #212121) padding-box,
        linear-gradient(145deg, transparent 35%, #fff, #0b633e) border-box;
      transition: all 1s ease;
      .card-content {
        img {
          border-radius: 5px;
          transform: scale(1.1);
          box-shadow: #000000 0px 20px 27px -5px, #000000 0px 8px 16px -8px;
          transition: all 0.7s ease;
        }

        h3,
        p {
          transition: all 0.8s ease;
          background-color: rgba(0, 0, 0, 0.256);
          border-radius: 5px;
        }
      }
    }

    .project-card::before {
      width: 100px;
      height: 100px;
      content: "";
      position: absolute;
      background-color: #7f5af0;
      z-index: -9;
      filter: blur(70px);
      transition: all 1s;
      animation: light 3.3s ease-out forwards;
    }

    .project-card:hover::before {
      filter: blur(50px);
      background-color: #fff;
    }
  }

  .chevrons {
    display: flex;
    flex-direction: column;
    width: 50px;
    position: relative;
    bottom: 450px;
    left: 400px;
    gap: 6.5em;
    animation: light 2.2s ease-out forwards;
    border-top: 5px solid #7f5af0;
    border-bottom: 5px solid #7f5af0;
    border-radius: 25px;
    background-color: rgb(22, 22, 26, 0.6);
    padding: 10px 0;

    button {
      border: none;
      color: white;
      background: none;
      cursor: pointer;
    }

    button:active {
      color: #7f5af0;
    }

    .up,
    .down {
      font-size: 30px;
    }
  }
}

@keyframes cards-animate {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
    height: 250px;
    width: 250px;
  }
}

@keyframes light {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes text-cards-animate {
  0% {
    opacity: 0;
    visibility: hidden;
  }

  50% {
    opacity: 0;
    visibility: hidden;
  }

  100% {
    opacity: 1;
    visibility: visible;
  }
}
/* ... */

